# interactive-point-labeller

./: .dockerignore  Dockerfile  README.md  pyproject.toml
demo/: create_test_data.py  demo_data.csv
interactive_point_labeller/: main.py
interactive_point_labeller/src/: interactive_point_labeller.py
src/interactive_point_labeller/: interactive_point_labeller.py  main.py
