[project]
name = "point_annotator"
version = "0.1.0"
description = "A Dash app to annotate points in a scatterplot for time series data."
authors = [
    { name = "Stepan Vondracek", email = "svondracek@outlook.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "plotly>=5.15.0"
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip = [
    ".tox", ".venv", "build", "dist"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/svondracek0/interactive-point-labeller/README.md"
repository = "https://github.com/svondracek0/interactive-point-labeller"

[tool.setuptools.packages.find]
where = ["interactive_point_labeller"]

[project.scripts]
point-annotator = "interactive_point_labeller:main"